--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,5 @@
+@import 'semantic-ui-css/semantic.min.css'
+
 /*
 body {
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
